# hpp-timeopt-python

./: CMakeLists.txt  LICENSE  README.md
bindings/: CMakeLists.txt
bindings/python/: CMakeLists.txt  __init__.py  module.cpp
bindings/python/container/: visitor.hpp
bindings/python/timeopt/: enum.cpp  enum.hpp  expose-phase.hpp  expose-problem.hpp  phase.cpp  phase.hpp  problem.cpp  problem.hpp
build_test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
build_test/bindings/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_test/bindings/python/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_test/cmake/: cmake_uninstall.cmake
build_test/include/timeopt/: config.hh  warning.hh
build_test/include/timeopt/bindings/python/container/: array.hpp
build_test/include/timeopt/bindings/python/timeopt/: enum.hpp  expose-phase.hpp  problem.hpp
build_test/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_test/unittest/: CTestTestfile.cmake  Makefile  cmake_install.cmake  contactplanner  problem  timeoptimization
include/serialization/: archive.hpp  eigen-matrix.hpp  fwd.hpp  spatial.hpp  xml.hpp
include/timeopt/: fwd.hpp  phase.hpp  problem.hpp
include/timeopt/interface/: contactplanner.hpp
script/: binding_test.py  locomote_test.py
src/: CMakeLists.txt
src/timeopt/: phase.cpp  problem.cpp
src/timeopt/interface/: contactplanner.cpp
unittest/: CMakeLists.txt  contactplanner.cc  problem.cc  timeoptimization.cc
